# Procurement-AI-Env

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  LOCAL_TESTING.md  README.md  TESTING.md  docker-compose.yml  final_validate.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: contracts.json  easy_tasks.json  hard_tasks.json  medium_tasks.json  stakeholder_profiles.json  vendors.json
env/: __init__.py  agent.py  constants.py  graders.py  models.py  negotiation.py  procurement_env.py  reward.py  tasks.py  utils.py  vendor_logic.py
results/: baseline_scores.json
server/: app.py
server/env/: procurement_env.py
tests/: test_api.py  test_graders.py  test_invalid_actions.py  test_reset.py  test_rewards.py  test_state.py  test_step.py
