[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "procurement_ai_env"
version = "0.1.0"
description = "A real-world procurement and vendor selection environment for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ProcurementAI Team", email = "aditi@example.com"}
]
keywords = ["openenv", "procurement", "ai-agents", "benchmarking"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "httpx",
    "requests",
    "python-dotenv",
    "pyyaml",
    "openenv-core>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "data*", "server*"]
